Source/WebCore/platform/graphics/FloatRoundedRect.h
@@ -141,9 +141,19 @@ inline bool operator==(const FloatRoundedRect::Radii& a, const FloatRoundedRect:
     return a.topLeft() == b.topLeft() && a.topRight() == b.topRight() && a.bottomLeft() == b.bottomLeft() && a.bottomRight() == b.bottomRight();
 }
 
+inline bool operator!=(const FloatRoundedRect::Radii& a, const FloatRoundedRect::Radii& b)
+{
+    return !(a == b);
+}
+
 inline bool operator==(const FloatRoundedRect& a, const FloatRoundedRect& b)
 {
     return a.rect() == b.rect() && a.radii() == b.radii();
+}
+
+inline bool operator!=(const FloatRoundedRect& a, const FloatRoundedRect& b)
+{
+    return !(a == b);
 }
 
 inline float calcBorderRadiiConstraintScaleFor(const FloatRect& rect, const FloatRoundedRect::Radii& radii)
