Source/WebCore/svg/SVGPathByteStream.h
@@ -55,6 +55,11 @@ public:
         return m_data == other.m_data;
     }
 
+    bool operator!=(const SVGPathByteStream& other) const
+    {
+        return !(*this == other);
+    }
+
     std::unique_ptr<SVGPathByteStream> copy() const
     {
         return std::make_unique<SVGPathByteStream>(m_data);
